--- a/app/qml.qrc
+++ b/app/qml.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
+        <file>components/RepoView.qml</file>
     </qresource>
 </RCC>
