--- a/app/qml.qrc
+++ b/app/qml.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>components/RepoView.qml</file>
+        <file alias="ApplicationIcon">res/app.ico</file>
     </qresource>
 </RCC>
