Singleton qml style object

--- a/app/qml.qrc
+++ b/app/qml.qrc
@@ -3,5 +3,6 @@
         <file>main.qml</file>
         <file>qml/base/TextItem.qml</file>
         <file>qml/components/RepoView.qml</file>
+        <file>qml/style/AppStyle.qml</file>
     </qresource>
 </RCC>
