--- a/app/qml.qrc
+++ b/app/qml.qrc
@@ -1,9 +1,10 @@
 <RCC>
     <qresource prefix="/">
-        <file>main.qml</file>
-        <file>qml/base/TextItem.qml</file>
         <file>qml/components/RepoView.qml</file>
         <file>qml/style/AppStyle.qml</file>
         <file>qml/style/qmldir</file>
+        <file>qml/components/History.qml</file>
+        <file>qml/main.qml</file>
+        <file>qml/base/TextItem.qml</file>
     </qresource>
 </RCC>
