--- a/app/qml.qrc
+++ b/app/qml.qrc
@@ -6,5 +6,7 @@
         <file>qml/components/History.qml</file>
         <file>qml/main.qml</file>
         <file>qml/base/TextItem.qml</file>
+        <file>qml/components/BranchView.qml</file>
+        <file>qml/components/RepositoryManager.qml</file>
     </qresource>
 </RCC>
