--- a/app/qml.qrc
+++ b/app/qml.qrc
@@ -3,10 +3,10 @@
         <file>qml/components/RepoView.qml</file>
         <file>qml/style/Style.qml</file>
         <file>qml/style/qmldir</file>
-        <file>qml/components/History.qml</file>
         <file>qml/main.qml</file>
         <file>qml/base/TextItem.qml</file>
         <file>qml/components/BranchView.qml</file>
         <file>qml/components/RepositoryManager.qml</file>
+        <file>qml/components/HistoryView.qml</file>
     </qresource>
 </RCC>
