--- a/app/app.qrc
+++ b/app/app.qrc
@@ -1,5 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file alias="ApplicationIcon">res/app.ico</file>
+        <file>res/Roboto-Regular-latin-20.woff2</file>
+        <file>res/Roboto-Regular-latin-24.woff2</file>
     </qresource>
 </RCC>
