--- a/app/qml.qrc
+++ b/app/qml.qrc
@@ -9,5 +9,7 @@
         <file>qml/components/BranchView.qml</file>
         <file>qml/components/HistoryView.qml</file>
         <file>qml/components/GitView.qml</file>
+        <file>qml/components/GraphView.qml</file>
+        <file>qml/base/JsonListModel.qml</file>
     </qresource>
 </RCC>
