--- a/app/qml.qrc
+++ b/app/qml.qrc
@@ -11,7 +11,7 @@
         <file>qml/components/GitView.qml</file>
         <file>qml/components/GraphView.qml</file>
         <file>qml/base/JsonListModel.qml</file>
-        <file>qml/components/Commit.qml</file>
         <file>qml/components/TreeView.qml</file>
+        <file>qml/components/CommitView.qml</file>
     </qresource>
 </RCC>
