UI wip Move commit details to inlined in the log Add HunkView (todo wireup with rust)

--- a/app/qml.qrc
+++ b/app/qml.qrc
@@ -13,5 +13,6 @@
         <file>qml/base/JsonListModel.qml</file>
         <file>qml/components/CommitView.qml</file>
         <file>qml/components/DiffsView.qml</file>
+        <file>qml/components/HunkView.qml</file>
     </qresource>
 </RCC>
