Refactor historylistview scrollbar into component

--- a/app/qml.qrc
+++ b/app/qml.qrc
@@ -14,5 +14,6 @@
         <file>qml/components/CommitView.qml</file>
         <file>qml/components/DiffsView.qml</file>
         <file>qml/components/HunkView.qml</file>
+        <file>qml/components/DesktopScrollbar.qml</file>
     </qresource>
 </RCC>
