--- a/app/qml.qrc
+++ b/app/qml.qrc
@@ -16,5 +16,7 @@
         <file>qml/components/HunkView.qml</file>
         <file>qml/components/DesktopScrollbar.qml</file>
         <file>qml/components/DiffStatusIcon.qml</file>
+        <file>qml/base/TypedArrayListModel.qml</file>
+        <file>qml/components/CustomScrollBar.qml</file>
     </qresource>
 </RCC>
