Hunkview key handling for listview
Also switched to QtRendering, which looks nicer (at least at +dpi modes), by adding a TextElement thats a TextEdit for easy selection possiblity.

--- a/app/qml.qrc
+++ b/app/qml.qrc
@@ -18,5 +18,6 @@
         <file>qml/components/DiffStatusIcon.qml</file>
         <file>qml/base/TypedArrayListModel.qml</file>
         <file>qml/components/CustomScrollBar.qml</file>
+        <file>qml/base/TextElement.qml</file>
     </qresource>
 </RCC>
