Improve diff list by using font metrics and CustomScrollBar
Initial python script to generate "bad" repos (eventually)

--- a/app/qml.qrc
+++ b/app/qml.qrc
@@ -17,5 +17,7 @@
         <file>qml/base/TypedArrayListModel.qml</file>
         <file>qml/components/CustomScrollBar.qml</file>
         <file>qml/base/TextElement.qml</file>
+        <file>qml/base/LibHelper.qml</file>
+        <file>qml/base/qmldir</file>
     </qresource>
 </RCC>
