Implement a basic VirtualListView to replace builtin ListView
The idea being that this works better with variable height content which the built in control
struggles with. Further we can hopefully enable some height computation if required.

Also add a LayoutHelper

--- a/app/qml.qrc
+++ b/app/qml.qrc
@@ -19,5 +19,9 @@
         <file>qml/base/TextElement.qml</file>
         <file>qml/base/LibHelper.qml</file>
         <file>qml/base/qmldir</file>
+        <file>qml/components/VirtualListView.qml</file>
+        <file>qml/components/VirtualListItem.qml</file>
+        <file>qml/components/VirtualListShared.qml</file>
+        <file>qml/base/LayoutHelper.qml</file>
     </qresource>
 </RCC>
